--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Adds a shadow at the bottom */
     position: sticky; /* Make the header sticky */
     top: 0; /* Stick to the top */
-    z-index: 1000; /* Ensure it's above other content */
+    z-index: 2000;
     height: 49px;
 }
 
@@ -139,7 +139,6 @@ span {
     padding: 40px; /* Increased size */
     border-radius: 15px; /* Rounded corners */
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    z-index: 1000; /* On top of other elements */
     animation: popupScale 0.5s forwards; /* Animation to scale up */
 }
 
@@ -151,10 +150,9 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7); /* Dark overlay */
-    opacity: 0; /* Initially transparent */
-    transition: opacity 0.5s; /* Smooth transition for opacity */
-    z-index: 999; /* Below the popup */
+    background: rgba(0, 0, 0, 0.7); 
+    opacity: 0; 
+    transition: opacity 0.5s; 
 }
 
 /* Activate overlay */
@@ -213,3 +211,6 @@ table.table-visible {
     animation: slideInFromBottom 0.5s forwards; /* Play the slide-in animation */
 }
 
+a{
+    color: darkblue;
+}
